--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       </section>
     </section>
     <script src="./main.js"></script>
-    <script src="./drag.js"></script>
+    <!-- <script src="./drag.js"></script> -->
   </body>
 </html>
